[JBWS-4102] Updated cxf logging api;  Replacing deprecated JDK methods;